fix: overflow-x of header

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 
 body {
   height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
 }
